fix: Remove spacing from tabs menu

--- a/assets/scss/_core/_tabs.scss
+++ b/assets/scss/_core/_tabs.scss
@@ -12,7 +12,7 @@
 		min-height: 58px;
 		display: flex;
 		flex-flow: row wrap;
-		margin: 0 0 20px;
+		margin: 0;
 		padding: 0 20px;
 		background: #fff;
 		font-size: 14px;
